changed settings to migrate over to another device

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,7 @@
 [DEFAULT]
 # temporary folder, where the script will compress/encrypt before uploading
-Workdir = /home/aorith/tmp
+# Note: /dev/shm will use system RAM(linux) so change it if your folders are bigger
+Workdir = /dev/shm/stbackup
 
 # folder to store the rclone binary, the user that runs st-backup.py needs permissions
 Rclone_path = rclone
@@ -28,48 +29,60 @@ Syncthing = True
 # If it's managed by Syncthing, enter its ID (get it from WEBUI)
 Id = a3c65-usmss
 # Path: EXACTLY the absolute path of the folder in the system
-Path = /media/datos/Syncthing/WORK
+Path = /Syncthing/WORK
+# DOW (DayOfWeek): 0 Monday - 6 Saturday
+# allowed days of the week to backup this folder
+# I've implementen this since I just have st-backup.py scheduled everynight
+# but I don't want to backup all the folders always - even if the minfiles
+# requisite (see below in remotes config) is true
+DOW = 05
 
 [SYNC_STUFF]
 Enabled = True
 Type = Folder
 Syncthing = True
 Id = dyowr-o3swk
-Path = /media/datos/Syncthing/SYNC_STUFF
+Path = /Syncthing/SYNC_STUFF
+DOW = 1345
 
 [KeePass]
 Enabled = True
 Type = Folder
 Syncthing = True
 Id = uv7cp-qrzup
-Path = /media/datos/Syncthing/KeePass
+Path = /Syncthing/KeePass
+DOW = 0123456
 
 [GENERAL]
 Enabled = True
 Type = Folder
 Syncthing = True
 Id = tydgt-nk9ud
-Path = /media/datos/Syncthing/GENERAL
+Path = /Syncthing/GENERAL
+DOW = 236
 
 [CalibreLibrary]
 Enabled = True
 Type = Folder
 Syncthing = True
 Id = hdboz-lnvyx
-Path = /media/datos/Syncthing/CalibreLibrary
+Path = /Syncthing/CalibreLibrary
+DOW = 5
 
 [ARCHIVE]
 Enabled = True
 Type = Folder
 Syncthing = True
 Id = yeeju-arkcj
-Path = /media/datos/Syncthing/ARCHIVE
+Path = /Syncthing/ARCHIVE
+DOW = 14
 
-[WebDAV]
+[Joplin]
 Enabled = True
 Type = Folder
 Syncthing = False
-Path = /media/datos/WebDAV
+Path = /WebDAV/Joplin
+DOW = 135
 
 # Remotes definition
 # ------------------
@@ -80,8 +93,10 @@ Enabled = True
 Type = Remote
 # Aliases(!) of the folders to backup, separated by an space
 # must match the alias: [alias] given to the folder
-Folders = WORK SYNC_STUFF KeePass GENERAL CalibreLibrary ARCHIVE WebDAV
-# Number of backups to keep for each folder, same order as Folders
+Folders = WORK SYNC_STUFF KeePass GENERAL CalibreLibrary ARCHIVE Joplin
+# Number of backups to keep for each folder, put them in the same order as Folders
+# after each run of st-backup.py a function will be called that removes the oldest
+# backup if maxbackups is reached (ignores Archived backups)
 Maxbackups = 2 15 30 4 2 4 4
 # Minimum number of files changed to go ahead with the backup (only for Syncthing folders, a '-' otherwise)
 Minfiles = 1 1 1 1 1 1 -
@@ -103,6 +118,6 @@ Minfiles = 7 7 1 7 12 7
 [dropbox-ao]
 Enabled = True
 Type = Remote
-Folders = SYNC_STUFF KeePass GENERAL ARCHIVE WebDAV
+Folders = SYNC_STUFF KeePass GENERAL ARCHIVE Joplin
 Maxbackups = 8 20 4 3 1
 Minfiles = 10 1 3 3 -
