implemented rest api calls

--- a/config.ini
+++ b/config.ini
@@ -6,11 +6,14 @@ Workdir = /dev/shm/stbackup
 # folder to store the rclone binary, the user that runs st-backup.py needs permissions
 Rclone_path = rclone
 
-# recipients to encrypt the resulting tarball, space separated
+# recipients (see man gpg) to encrypt the resulting tarball, space separated
 Recipients = 5F7ECA55
 
-# Syncthings audit log
-Audit_log = /tmp/syncthing_audit.log
+### Syncthing REST API config
+ST_Apikey = <YOURAPIKEY> => WebUI --> Advanced
+ST_Host = localhost
+ST_Port = 8384
+ST_Https = False
 
 # Folder that will be created inside of the remotes to store the backups
 Remote_root = STBACKUP
@@ -36,6 +39,14 @@ Path = /Syncthing/WORK
 # but I don't want to backup all the folders always - even if the minfiles
 # requisite (see below in remotes config) is true
 DOW = 05
+
+# Example of a folder not managed by syncthing
+[Joplin]
+Enabled = True
+Type = Folder
+Syncthing = False
+Path = /WebDAV/Joplin
+DOW = 135
 
 [SYNC_STUFF]
 Enabled = True
@@ -76,13 +87,6 @@ Syncthing = True
 Id = yeeju-arkcj
 Path = /Syncthing/ARCHIVE
 DOW = 14
-
-[Joplin]
-Enabled = True
-Type = Folder
-Syncthing = False
-Path = /WebDAV/Joplin
-DOW = 135
 
 # Remotes definition
 # ------------------
